  - Fixed defect #1344 OpenSubtitles plugin error
  - Enhancement  #1352 More information during startup scanning
  - Fixed defect #1353 Duration isn't correctly read from Allocine
  - Enhancement  #1355 Support for multiple NFO file extensions
  - Enhancement  #1356 Option to accept all found NFO files in a directory
  - Enhancement  #1362 Improve search accuracy for FilmAffinity plugin
  - Enhancement  #1365 Allocine Plugin: Fallback to release date if production date isn't available
  - Fixed defect #1367 PART title processing broke
  - Fixed defect #1376 Null Pointer Exception in MovieDirectoryScanner
  - Enhancement  #1378 Kinopoisk plugin search enhancement
  - Fixed defect #1386 Keep previously scanned movies parameter causes playLink error
  - Enhancement  #1389 Allocine now gets certifications
  - Fixed defect #1394 TV Series Episode names not picked up from filename
  - Fixed defect #1399 Keep previously scanned movies parameter causes <cast> duplicate name

MovieJukebox 1.9 (r1500)
------------------------
  - Fixed defect  #855 Year in TV series files names over rides season based year
  - Enhancement   #975 Reworking of jukebox clean up routine
  - Fixed defect  #981 Use poster.scanner.SearchPriority regardless of mjb.internet.plugin (other than IMDb)
  - Fixed defect #1013 Support for localised IMDB, e.g. (ES, FR, DE, etc)
  - Fixed defect #1155 YAMJ refuses to pickup fanart and poster for a movie
  - Enhancement  #1239 Plugin for www.comingsoon.it
  - Enhancement  #1277 Get all available IMDb information (actors, directors, genres, etc)
  - Fixed defect #1283 IMDB update for non-MPAA Certification
  - Fixed defect #1284 Comma divider missing when not all fields present in default skins
  - Fixed defect #1287 Bad extraction of TVDb id from NFO
  - Enhancement  #1282 Add movie poster FilmAffinity
  - Fixed defect #1289 Release Date or Premiered date is not being loaded from NFO file